move technics images

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
         <h2>What are we doing</h2>
         <ul>
             <li>
-                <img src="./images/image1.jpg" alt="mac image" width="360" height="300">
+                <img src="images/technics/img-1.jpg" alt="monitor image" width="360" height="300">
             </li>
             <li>
-                <img src="./images/image2.jpg" alt="phone image" width="360" height="300">
+                <img src="images/technics/img-2.jpg" alt="phone image" width="360" height="300">
             </li>
             <li>
-                <img src="./images/image3.jpg" alt="laptop and phone image" width="360" height="300">
+                <img src="images/technics/img-3.jpg" alt="laptop and phone image" width="360" height="300">
             </li>
         </ul>
     </section>
