--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             <li>
                 <h3>Diligence</h3>
                 <p>
-                    Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                    Research and confirm brands that present the strongest digital growth opportunities and minimize
+                    risk.
                 </p>
             </li>
             <li>
@@ -57,7 +58,7 @@
             </li>
         </ul>
     </section>
-    
+
     <section>
         <h2>What are we doing</h2>
         <ul>
