--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
 <body>
 <header>
     <nav>
+        <a href="./index.html">WEBSTUDIO</a>
         <ul>
-            <li><a href="/">WEB STUDIO</a></li>
             <li><a href="/">Studio</a></li>
             <li><a href="/">Portfolio</a></li>
             <li><a href="/">Contacts</a></li>
         </ul>
+        <address>
+            <ul>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
     </nav>
-
-    <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:">+11 (000) 111-11-11</a>
-    </address>
 </header>
 
 <main>
     <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button>Order Service</button>
+        <button type="button">Order Service</button>
     </section>
 
     <section>
@@ -63,13 +64,13 @@
         <h2>What are we doing</h2>
         <ul>
             <li>
-                <img src="images/technics/img-1.jpg" alt="monitor image" width="360" height="300">
+                <img src="./images/technics/img-1.jpg" alt="monitor image" width="360" height="300">
             </li>
             <li>
-                <img src="images/technics/img-2.jpg" alt="phone image" width="360" height="300">
+                <img src="./images/technics/img-2.jpg" alt="phone image" width="360" height="300">
             </li>
             <li>
-                <img src="images/technics/img-3.jpg" alt="laptop and phone image" width="360" height="300">
+                <img src="./images/technics/img-3.jpg" alt="laptop and phone image" width="360" height="300">
             </li>
         </ul>
     </section>
@@ -102,7 +103,7 @@
 </main>
 
 <footer>
-    <a href="/">WEB STUDIO</a>
+    <a href="./index.html">WEB STUDIO</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
