--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
 <header>
     <nav>
-        <a href="./index.html">WEBSTUDIO</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="/">Studio</a></li>
             <li><a href="/">Portfolio</a></li>
             <li><a href="/">Contacts</a></li>
         </ul>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:">+11 (000) 111-11-11</a></li>
-            </ul>
-        </address>
     </nav>
+    <address>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+    </address>
 </header>
 
 <main>
@@ -103,7 +103,7 @@
 </main>
 
 <footer>
-    <a href="./index.html">WEB STUDIO</a>
+    <a href="./index.html">WebStudio</a>
     <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
